# Clinical-Trial-Analytics

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
docs/: commands.md  decision_log.md
notebooks/: 01_trial_landscape.ipynb  01_trial_landscape_v2.ipynb  02_completion_analysis.ipynb  03_enrollment_performance.ipynb  04_geographic_insights.ipynb  05_duration_analysis.ipynb
notebooks/_legacy/: 01_trial_landscape.ipynb
scripts/: run_etl.py  setup_database_simple.py
sql/queries/: 01_trial_landscape.sql  q1_condition_base.sql  q1_phase_status_distribution.sql  q1_study_base.sql  q1_temporal_base.sql  q1_temporal_condition_base.sql  q1_top_therapeutic_areas.sql  q1_yearly_trends.sql  q2_abt.sql  q2_termination_patterns.sql  q3_conditions_enrollment.sql  q3_enrollment_abt.sql  q3_enrollment_by_condition.sql  q3_study_condition_map.sql  q4_abt.sql  q4_country_condition.sql  q4_site_counts_by_phase.sql  q4_top_cities.sql  q4_trials_by_country.sql  q5_abt.sql
sql/queries/_legacy/: README.md  q1_phase_status_distribution.sql  q1_top_therapeutic_areas.sql  q2_completion_rates_by_phase.sql  q2_time_to_completion.sql  q3_enrollment_by_phase.sql  q3_enrollment_by_status.sql
sql/schema/: 01_create_tables.sql  02_create_indexes.sql  03_create_views.sql
src/analysis/: constants.py  metrics.py  viz.py
src/config/: settings.py
src/data/: __init__.py  api_client.py  loader.py
src/etl/: extract.py  load.py  transform.py  validate.py
src/utils/: __init__.py  logger.py  notebook.py
tests/: README.md  test_load.py  test_schema.py  test_transform.py
