[project]
name = "clinical-trial-analytics"
version = "0.1.0"
description = "Clinical trial data analysis for DA technical challenge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API & HTTP
    "requests>=2.32.3",
    "tenacity>=9.1.2",

    # Data Processing (Polars-first, pandas for compatibility)
    "polars>=1.37.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "numpy>=2.4.1",
    "python-dateutil>=2.9.0",

    # Database
    "sqlalchemy>=2.0.45",

    # Charts (for notebooks)
    "plotly>=6.5.2",

    # Statistics
    "statsmodels>=0.14.6",

    # Configuration & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",

    # CLI & Logging
    "rich>=14.2.0",
    "loguru>=0.7.2",

    # Task runner
    "poethepoet>=0.40.0",
]

[dependency-groups]
dev = [
    # Notebooks
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",

    # Linting & Formatting
    "ruff>=0.14.11",

    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# Ruff Configuration (replaces both black and pylint)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

# ============================================================================
# Poe Tasks - Simplified DA-first workflow
# ============================================================================
[tool.poe.tasks]

# Database
build-db = { cmd = "python scripts/setup_database_simple.py", help = "Create database" }

# Data ingestion
etl = { cmd = "python scripts/run_etl.py", help = "Extract, transform, and load data to DB" }

# Analysis
nb = { cmd = "jupyter notebook notebooks/", help = "Launch Jupyter notebooks" }
sql = { cmd = "sqlite3 data/database/clinical_trials.db", help = "Open SQLite console" }

# Development
check = { cmd = "ruff check src/ tests/", help = "Lint code" }
format = { cmd = "ruff format src/ tests/ scripts/", help = "Format code" }
test = { cmd = "pytest tests/ -v", help = "Run tests" }

# Info
config = { cmd = "python src/config/settings.py", help = "Show configuration" }

# Composite
[tool.poe.tasks.setup]
help = "First-time setup: create DB"
sequence = ["build-db"]

[tool.poe.tasks.qa]
help = "Quality checks: format + lint + test"
sequence = ["format", "check", "test"]
